[metadata]
name = httc
version = 0.1.0
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = http interface for CEC
description-file = README.md
home-page = https://github.com/lad1337/httc
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Libraries

[entry_points]
console_scripts =
    httc-server = httc.server:main
